; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_obs_hotkeys_context_release.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_obs_hotkeys_context_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_context_data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_hotkeys_context_release(%struct.obs_context_data* %0) #0 {
  %2 = alloca %struct.obs_context_data*, align 8
  store %struct.obs_context_data* %0, %struct.obs_context_data** %2, align 8
  %3 = call i32 (...) @lock()
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %16

6:                                                ; preds = %1
  %7 = load %struct.obs_context_data*, %struct.obs_context_data** %2, align 8
  %8 = call i32 @context_release_hotkeys(%struct.obs_context_data* %7)
  %9 = load %struct.obs_context_data*, %struct.obs_context_data** %2, align 8
  %10 = call i32 @context_release_hotkey_pairs(%struct.obs_context_data* %9)
  %11 = load %struct.obs_context_data*, %struct.obs_context_data** %2, align 8
  %12 = getelementptr inbounds %struct.obs_context_data, %struct.obs_context_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @obs_data_release(i32 %13)
  %15 = call i32 (...) @unlock()
  br label %16

16:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @lock(...) #1

declare dso_local i32 @context_release_hotkeys(%struct.obs_context_data*) #1

declare dso_local i32 @context_release_hotkey_pairs(%struct.obs_context_data*) #1

declare dso_local i32 @obs_data_release(i32) #1

declare dso_local i32 @unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
